adding browser open to context menu etc.
git-svn-id: https://svn.apache.org/repos/asf/airavata/trunk@1514000 13f79535-47bb-0310-9956-ffa450edef68